--- a/project/vuetest2/package.json
+++ b/project/vuetest2/package.json
@@ -16,9 +16,11 @@
     "@vue/cli-plugin-babel": "^3.4.0",
     "@vue/cli-plugin-eslint": "^3.4.0",
     "@vue/cli-service": "^3.4.0",
+    "axios": "^0.18.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
+    "vue-cli-plugin-axios": "0.0.4",
     "vue-template-compiler": "^2.5.21"
   },
   "eslintConfig": {
